--- a/demo.html
+++ b/demo.html
@@ -1,8 +1,6 @@
 因为这个网站在初期，所以很简陋
 <br>
-< meta http-equiv= "refresh"
-content= "0.1;url= https://share.weiyun.com/5DjEHyx
->
+<a href="https://share.weiyun.com/5DjEHyx">我的“病毒”</a>
 <br>
 <a href="https://share.weiyun.com/50BJn4S">我的小工具</a>
 <br>
