--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,8 @@
-<p color = "blue">因为这个网站在初期，所以很简陋</p>
+<p>因为这个网站在初期，所以很简陋</p>
 <a href="https://share.weiyun.com/5DjEHyx" target="_blank">我的“病毒”</a>
 <br>
 <a href="https://share.weiyun.com/50BJn4S" target="_blank">我的小工具</a>
 <br>
 <p>网站说明：我一直希望有属于自己的官方网站，如今终于实现了。希望大家能多多支持我，如果喜欢（早期应该不存在吧）我的网站希望大家赞助我，让这个网站更加好！</p>
-<p color = "red">赞助二维码：</p>
+微信赞助二维码：
+<img src="微信赞赏.png">
