--- a/demo.html
+++ b/demo.html
@@ -1,8 +1,7 @@
+<title>秦杰睿官网</title>
 <p>因为这个网站在初期，所以很简陋</p>
 <a href="https://share.weiyun.com/5DjEHyx" target="_blank">我的“病毒”</a>
 <br>
 <a href="https://share.weiyun.com/50BJn4S" target="_blank">我的小工具</a>
 <br>
-<p>网站说明：我一直希望有属于自己的官方网站，如今终于实现了。希望大家能多多支持我，如果喜欢（早期应该不存在吧）我的网站希望大家赞助我，让这个网站更加好！</p>
-微信赞助二维码：
-<img src="微信赞赏.png">
+喜欢这个网站？<a href="官网.html">赞助我</a>
