--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,12 @@
-<title>秦杰睿官网</title>
-<p>因为这个网站在初期，所以很简陋</p>
-<a href="https://share.weiyun.com/5DjEHyx" target="_blank">我的“病毒”</a>
-<br>
-<a href="https://share.weiyun.com/50BJn4S" target="_blank">我的小工具</a>
-<br>
-喜欢这个网站？<a href="官网.html">赞助我</a>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no">
+  <title>时光的涂鸦墙</title>
+<link rel="shortcut icon" href="./favicon.png"><link href="./styles.ac3c4a1a.css" rel="stylesheet"></head>
+<body>
+  <div id="app"></div>
+<script type="text/javascript" src="./vendor.5d1915d0.js"></script><script type="text/javascript" src="./client.c409400b.js"></script></body>
+</html>
